deploymentfiles/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fb-deploy
  labels:
    app: facebook
    env: lab 

spec:
  selector:
    matchLabels:
      app: facebook
  replicas: 2  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      name: fbpod
      labels:
        app: facebook
        env: lab 
        Version: AC_V1
    spec:
      containers:
        - name: fbcont1
          image: laditrinath321/batch15d:10
          ports:
            - containerPort: 8080
