deploymentfiles/service.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: fb-lb-svc
  labels:
    app: facebook 

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: facebook
